[package]
name = "wow-web"
version = "0.1.0"
authors = ["jelly <jellybobbin@gmail.com>"]
edition = "2018"
description = "Wow web is a simple, pragmatic and extremely fast web framework for Rust."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-types = "1.2.0"
async-h1 = "1.1.2"
futures = "0.3.4"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]